--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   
-
+<script src="index.js"></script>
 <link rel="stylesheet" href="style.css">
 <!-- Canvas -->
 <canvas class="orb-canvas"></canvas>
