--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
 </head>
 <body>
   
-<script src="index.js"></script>
+
 <link rel="stylesheet" href="style.css">
 <!-- Canvas -->
 <canvas class="orb-canvas"></canvas>
 <!-- Overlay -->
 <div class="overlay">
   <!-- Overlay inner wrapper -->
+  <div class="command" hidden>
+    <ul>
+      <li style="animation: fade-in 5s ease-in-out;">Start Patil</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Sales Analysis Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Sales Quantity Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Average Price Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Working Capital Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Sales Analysis Report</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Customer Sales Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Comparision Dashboard</li>
+    </ul>
+  </div>
   <div class="overlay__inner">
     <!-- Title -->
     <h1 class="overlay__title">
@@ -25,6 +37,8 @@
       We're not just engineering; we're revolutionizing railway engineering in India through our journey of
       <strong>digital transformation.</strong>
     </p>
+    <!-- Powered by -->
+    <div class="powered-by" onclick="window.open('sriainfotech.com', '_blank')">Powered by Sria InfoTech Pvt Ltd</div>
     <!-- Buttons -->
     <div class="overlay__btns">
 
@@ -38,10 +52,17 @@
           Get Started
         </a>
       </button>
+      <button class="overlay__btn overlay__btn--transparent" onclick="showCommands()">ShowCommands</button>
 
     </div>
   </div>
 </div>
 </body>
 <script src="script.js"></script>
+<script>
+  function showCommands() {
+    var commandDiv = document.querySelector('.command');
+    commandDiv.hidden = !commandDiv.hidden;
+  }
+</script>
 </html>
