--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <strong>digital transformation.</strong>
     </p>
     <!-- Powered by -->
-    <div class="powered-by" onclick="window.open('sriainfotech.com', '_blank')">Powered by Sria InfoTech Pvt Ltd</div>
+    <div class="powered-by">Powered by Sria InfoTech Pvt Ltd</div>
     <!-- Buttons -->
     <div class="overlay__btns">
 
