--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!-- Overlay inner wrapper -->
   <div class="command" hidden>
     <ul>
-      <li style="animation: fade-in 5s ease-in-out;">Start Patil</li>
-      <li style="animation: fade-in 1s ease-in-out;">Open Sales Analysis Dashboard</li>
+      <li style="animation: fade-in 5s ease-in-out;">Start Patil Group</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Sales Comparision Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Sales Quantity Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Average Price Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Working Capital Dashboard</li>
