--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <li style="animation: fade-in 1s ease-in-out;">Open Sales Analysis Report</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Customer Sales Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Comparision Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Stop / Terminate / Exit</li>
+    
     </ul>
   </div>
   <div class="overlay__inner">
