--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <!-- Overlay inner wrapper -->
   <div class="command" hidden>
     <ul>
-      <li style="animation: fade-in 5s ease-in-out;">Start Patil Group</li>
-      <li style="animation: fade-in 1s ease-in-out;">Open Sales Comparision Dashboard</li>
+      <li style="animation: fade-in 1s ease-in-out;">Start Patil Group</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Sales Analysis Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Sales Quantity Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Average Price Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Working Capital Dashboard</li>
-      <li style="animation: fade-in 1s ease-in-out;">Open Sales Analysis Report</li>
+      <li style="animation: fade-in 1s ease-in-out;">Open Sales Comparision</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Customer Sales Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Open Comparision Dashboard</li>
       <li style="animation: fade-in 1s ease-in-out;">Stop / Terminate / Exit</li>
