--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
                 </video>
             </div>
             <div class="content">
-                <h1>PowerBi Voice</h1>
-                <h3>lorem</h3>
+                <h1>Navigate Your PowerBI Dashboard through voice</h1>
+                <h3>We're not just engineering; we're revolutionizing railway engineering in India through our journey of
+      <strong>digital transformation.</strong></h3>
                 
-                <a href="explore.html">Start Exploring</a>
+                <a href="explore.html">Show Commands</a>
             </div>
 
 
