--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
                 </video>
             </div>
             <div class="content">
-                <h1>Navigate Your PowerBI Dashboard through voice</h1>
-                <h3>We're not just engineering; we're revolutionizing railway engineering in India through our journey of
-      <strong>digital transformation.</strong></h3>
+                <h1>PowerBi Navigator</h1>
+                <h3>Navigate your PowerBi dashboards Through your voice</h3>
                 
                 <a href="explore.html">Show Commands</a>
             </div>
