--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </video>
             </div>
             <div class="content">
-                <h1>PowerBi Navigator</h1>
+                <h1>Welcome to PowerBI Navigator</h1>
                 <h3></h3>
                 
                 <a href="explore.html">Show Commands</a>
